ersetze als deprecated markierten Konstruktor von Long(long)